--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -4,6 +4,9 @@
     text-align: center;
     // height: 100vh;
     background-image: linear-gradient(to right bottom, $color-primary, $color-secondary);
+    @include responsive(mb) {
+        padding: 10rem 2rem;
+    }
 }
 
 .grid {
@@ -11,6 +14,10 @@
     grid-template-columns: repeat(auto-fill, minmax(370px, 1fr));
     grid-auto-rows: minmax(500px, auto);
     gap: 2rem;
+
+    @include responsive(mb) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .card {
@@ -25,7 +32,7 @@
 
     &__imgplaceholder {
         width: 100%;
-        height: 300px;
+        height: 53%;
         position: relative;
         overflow: hidden;
         background-color: $color-tertiary;
